--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "none",
-    "start:dev" : "nodemon index.js",
-    "start":"node index.js"
+    "start:dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -28,9 +28,11 @@
   "homepage": "https://github.com/shivrajkhetri7/blog#readme",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.7.1",
+    "mongoose": "^8.9.2",
+    "mongose": "^0.0.2-security",
     "nodemon": "^3.1.7"
   }
 }
